13.1. Fixed zoom bug when clicking on input on Iphone?

--- a/src/components/TasksInput/TasksInput.module.scss
+++ b/src/components/TasksInput/TasksInput.module.scss
@@ -16,6 +16,7 @@
   padding: 5px 15px;
   border-radius: 5px;
   margin-bottom: 20px;
+  font-size: 16px;
 }
 
 .tasksInput__btn {
